# PARVPO_lab2

./: Parvpo LAB2.md  all.env  docker-compose.yaml
base_cpr/: Dockerfile
compute/: CMakeLists.txt  Dockerfile  compute.cpp
consumer1/: CMakeLists.txt  Dockerfile  consumer.cpp
dev/: producer.py
nginx/: Dockerfile  default.conf  nginx.conf
producer1/: Dockerfile
producer2/: Dockerfile  producer.go
